infra/overlays/prod/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: effect-website
  labels:
    app: effect-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: effect-website
  template:
    metadata:
      labels:
        app: effect-website
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: effect-website
          image: ghcr.io/effect-ts/website:main
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 2
              memory: 2Gi
            limits:
              cpu: 4
              memory: 4Gi
          ports:
            - containerPort: 3000
              protocol: TCP
