infra/overlays/prod/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: effect-website
spec:
  type: NodePort
  selector:
    app: effect-website
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
